# holy-grail

./: .dockerignore  .env.example  .env_example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Caddyfile  Caddyfile.dev  LOCAL_DEVELOPMENT.md  Makefile  README.md  aws-local.sh  codecov.yml  docker-compose.database.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pre-commit  sonar-project.properties  test-integration.sh  turbo.json
.claude/: settings.json.example
.claude/agents/: backend.md  planner.md
.claude/commands/: README.md  update-claude-md.md
.claude/hooks/: README.md  workflow-detector.sh
.github/workflows/: backend.yml  build-and-deploy.yml  build.yml  changelog.yml  codecov.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  frontend.yml  main.yml  merge-ci.yml  pull-request-test.yml  test.yml
apps/app-frontend/: Dockerfile  package.json
apps/backend/: Dockerfile  Dockerfile.ci  Dockerfile.test  README.md  alembic.ini  package.json  pyproject.toml
apps/backend/app/: main.py  requirements.txt
apps/backend/app/api/: api.py  deps.py
apps/backend/app/api/endpoints/: ad_analytics.py  admin.py  analytics.py  auth.py  categories.py  favourites.py  files.py  library.py  scoreboard.py  tasks.py
apps/backend/app/core/: __init__.py  config.py  enums.py
apps/backend/app/crud/: base.py
apps/backend/app/db/: base.py  base_class.py  database.py
apps/backend/app/email_templates/: new_password.html  verify_email.html
apps/backend/app/models/: __init__.py  ad_analytics.py  analytics.py  auth.py  categories.py  favourites.py  library.py  scoreboard.py
apps/backend/app/schemas/: __init__.py  admin.py  analytics.py  auth.py  base.py  categories.py  favourites.py  library.py  scoreboard.py
apps/backend/app/services/: __init__.py  cache.py  email.py  search.py  storage.py  task_client.py
apps/backend/app/tasks/: fetch_google_analytics.py  health_check.py  new_password_email.py  reset_password_email.py  update_scoreboard_users.py  verify_email.py
apps/backend/app/tests/: conftest.py
apps/backend/app/tests/api/: auth.py  categories.py  example.py  test_task_e2e.py  test_task_integration.py
apps/backend/app/utils/: auth.py  email_handler.py  exceptions.py  file_handler.py  flags.py  limiter.py  pdf_extractor.py  starlette_validation_uploadfile.py  upload_errors.py  worker.py
apps/backend/backend/: .coveragerc  .pylintrc  pyproject.toml
apps/backend/backend/app/: main.py  requirements.txt
apps/backend/backend/app/api/: api.py  deps.py
apps/backend/backend/app/api/endpoints/: auth.py  files.py  scoreboard.py
apps/backend/backend/app/crud/: base.py
apps/backend/backend/app/db/: database.py
apps/backend/backend/app/email_templates/static/: styles.css
apps/backend/backend/app/models/: ad_analytics.py  analytics.py  auth.py  categories.py  library.py  scoreboard.py
apps/backend/backend/app/services/: email.py  storage.py
apps/backend/backend/app/tests/: conftest.py
apps/backend/backend/app/tests/api/: auth.py  categories.py  example.py
apps/backend/backend/app/utils/: auth.py  email_handler.py  file_handler.py  starlette_validation_uploadfile.py  worker.py
apps/backend/backend/migrations/versions/: 23721ba0e461_email_update.py  4b5888d54fc3_add_scoreboard.py  687b59af50ab_add_doc_name_index.py  ab2ee1df8d7b_remove_unique_doc_name.py  bffa95ea4989_fix_analytics_default_timestamp.py  d710d2405b9f_cat_sub_fk_constraint.py  e8da151c2972_init.py  fcf930aadcbe_subject_category_fk_relationship.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 082d4bc20fd4_time_zone_aware.py  2a01135883a9_add_extension_to_notes.py  2cecad328730_rename_starred_files_to_favourite_files.py  302ae8bd6669_add_year_attribute.py  4b5888d54fc3_add_scoreboard.py  5797ef4920d2_add_reset_password.py  687b59af50ab_add_doc_name_index.py  73246e7e5e36_moved_favourites_to_its_own_table.py  7b47fd460f9c_update_index.py  8092c031dfc1_moved_favourites_to_its_own_table.py  8fda183cf6e8_update.py  95aad19d1ae6_added_starred_files_column_to_auth_table.py  d30ae94f4500_add_ad_analytics.py  d710d2405b9f_cat_sub_fk_constraint.py
apps/backend/scripts/: build_search_index.py  seed_analytics.py  seed_data.py  update_search_metadata.py
apps/frontend/: .env  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  (+5 more)
apps/task/: .env  Dockerfile  Makefile  README.md  api.py  celeryconfig.py  config.py  package.json  pyproject.toml  worker.py
apps/task/email_service/: email_task_client.py
apps/task/services/: __init__.py  search.py
apps/task/tasks/: delete_document.py  fetch_google_analytics.py  health_check.py  index_document.py  new_password_email.py  reset_password_email.py  update_scoreboard_users.py  verify_email.py
apps/task/tests/: conftest.py  test_tasks.py
apps/task/utils/: __init__.py  pdf_extractor.py
docker/: docker-compose.db.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md  TROUBLESHOOTING.md
holy-grail-frontend/: .env.custom  .env.dev  .env.development  .env.example  .env.local  .env.one  .env.prod  .env.production  .env.two  .env_example  .eslintrc.cjs  .gitignore  Dockerfile.dev  Dockerfile.local  Dockerfile.one  Dockerfile.prod  Dockerfile.two  README.md  bun.lockb  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
new-frontend/: .env.prod  Dockerfile  Dockerfile.dev  Dockerfile.prod  bun.lockb  tailwind.config.ts
old-frontend/: .dockerignore  Dockerfile.dev  LICENSE  bun.lockb  index.html
terraform/: .env.example  .gitignore  README.md  STAGING-SETUP.md  main.tf  porkbun.sh  porkbun_delete.sh  terraform.tfvars.example  variable.tf
(+1436 files in other folders)
